<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DopeMaster</string>
    <string name="action_settings">Settings</string>

    <string name="tab_home">首页</string>
    <string name="tab_order">订单</string>
    <string name="tab_show">展示</string>
    <string name="tab_my">我的</string>

    <!--以下是首页所用到的String-->
    <string name="home_title_bar">首页</string>
    <string name="home_announce_order">发布装修单</string>
    <string name="home_find_team">寻找装修团队</string>
    <string name="home_question_answer">装修学堂</string>
    <string name="home_material_recommendation">装修材料推荐</string>

    <string name="home_find_team_price">价格</string>
    <string name="home_find_team_popularity">人气</string>
    <string name="home_text_view_master">徐师傅</string>
    <string name="home_text_view_number">接单96次</string>

    <string name="home_setting_comment">去评价一把</string>
    <string name="home_setting_advice_feedback">建议与反馈</string>
    <string name="home_setting_recommend_friend">推荐给好友</string>
    <string name="home_setting_check_update">检查更新</string>
    <string name="home_setting_delete_cache">清理缓存</string>
    <string name="home_setting_aboutUs">关于我们</string>

    <string name="home_left_choseCity">已选择城市</string>
    <string name="home_left_city">珠海</string>
    <string name="home_faBu_s">发布装修单</string>

    <!--以下是订单页面所用到的String-->
    <string name="order_tab_string">我的订单</string>
    <string name="order_all">全部订单</string>
    <string name="order_ongoing">进行中</string>
    <string name="order_evaluate">待评价</string>


    <!--我的-->
    <string name="my_topText">个人中心</string>
    <string name="my_name">姓名</string>
    <string name="my_phone">手机号</string>
    <string name="my_zipcode">邮编</string>
    <string name="my_province">省市区</string>
    <string name="my_address">街道地址</string>
    <string name="new_address">新建装修地址</string>
    <string name="addr_empty_view">没有保存的地址</string>
    <string name="manager_address">地址管理</string>
    <string name="addr_picker_title">请选择省市区</string>
    <string name="operate_addr">选择操作</string>
    <string name="finish">完成</string>
    <string name="modify">修改</string>
    <string name="delete_addr">删除</string>
    <string name="notify_back">地址表单未完成,退出将不会被保存或删除</string>
    <string name="notify">注意:</string>
    <string name="manager_coupon">优惠券</string>
    <string name="coupon_empty_view">未获得过优惠券</string>
    <string name="pencil">&#xf129;</string>
    <string name="create_addr">&#xf199;</string>
    <string name="back_addr">&#xf10a;</string>
    <string name="my_nameText">jack</string>
    <!--以下是展示页面所用的String-->
    <string name="show_tab_string">展示</string>
</resources>
