<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
             android:id="@+id/fragment_createaddr"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
             android:orientation="vertical" >

    <RelativeLayout
            android:id="@+id/addr_topBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#78A7FB"
            android:orientation="vertical">

        <com.daoguang.dopemaster.base.FontIconButton
                android:id="@+id/back_addrlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:textColor="@color/blue"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:padding="4dp"
                android:text="@string/back_addr" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_address"
                android:textSize="24sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white" />

    </RelativeLayout>

    <EditText
            android:id="@+id/new_addr_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/my_name" />

    <TextView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/line" />

    <EditText
            android:id="@+id/new_addr_phone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:phoneNumber="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/my_phone" />

    <TextView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/line" />

    <EditText
            android:id="@+id/new_addr_pro"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:hint="@string/my_province" />

    <TextView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/line" />

    <EditText
            android:id="@+id/new_addr_zipcode"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:numeric="integer"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/my_zipcode" />

    <TextView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/line" />

    <EditText
            android:id="@+id/new_addr_street"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/my_address" />

</LinearLayout>