<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
             android:id="@+id/fragment_createaddr"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
             android:orientation="vertical" >

    <com.daoguang.dopemaster.ui.view.TopBar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            custom:titleText="@string/new_address"
            custom:titleTextSize="15sp"
            custom:titleTextColor="#FFFFFF"
            custom:leftMargin="15dp"
            custom:topMargin="2dp" />

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/my_name" />

    <TextView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/line"
            style="?android:listSeparatorTextViewStyle"/>

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/my_phone" />

    <TextView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/line"
            style="?android:listSeparatorTextViewStyle"/>

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/my_province" />

    <TextView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/line"
            style="?android:listSeparatorTextViewStyle"/>

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/my_address" />

</LinearLayout>