<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_bar_height"
    android:background="@drawable/tabbg"
    android:gravity="center_vertical"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/home_layout"
        style="@style/main_bottom_bar_linear" >

        <ImageView
            android:id="@+id/home_image"
            style="@style/main_bottom_bar_image"
            android:background="@drawable/home"/>

        <TextView
            android:id="@+id/home_text"
            style="@style/main_bottom_bar_text"
            android:text="@string/tab_home" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_layout"
        style="@style/main_bottom_bar_linear" >

        <ImageView
            android:id="@+id/order_image"
            style="@style/main_bottom_bar_image"
            android:background="@drawable/order"/>

        <TextView
            android:id="@+id/order_text"
            style="@style/main_bottom_bar_text"
            android:text="@string/tab_order" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_layout"
        style="@style/main_bottom_bar_linear" >

        <ImageView
            android:id="@+id/show_image"
            style="@style/main_bottom_bar_image"
            android:background="@drawable/show"/>

        <TextView
            android:id="@+id/show_text"
            style="@style/main_bottom_bar_text"
            android:text="@string/tab_show" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_layout"
        style="@style/main_bottom_bar_linear" >

        <ImageView
            android:id="@+id/my_image"
            style="@style/main_bottom_bar_image"
            android:background="@drawable/my"/>

        <TextView
            android:id="@+id/my_text"
            style="@style/main_bottom_bar_text"
            android:text="@string/tab_my" />
    </LinearLayout>



</LinearLayout>
