<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.daoguang.dopemaster.ui.view.TopBar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        custom:leftIcon="@mipmap/location"
        custom:rightIcon="@mipmap/setting"
        custom:titleText="@string/home_title_bar"
        custom:titleTextSize="15sp"
        custom:titleTextColor="#FFFFFF"
        custom:leftMargin="15dp"
        custom:topMargin="2dp"/>

    <!--广告布局-->
    <include layout="@layout/home_advertising_layout"
        android:layout_width="match_parent"
        android:layout_height="115dp"/>

    <!--内容布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/announce_order"
            style="@style/home_linear_layout" >

            <ImageView
                style="@style/home_content_icon"
                android:src="@mipmap/announce_order" />

            <TextView
                style="@style/home_content_text"
                android:textColor="#3C3C3C"
                android:text="@string/home_announce_order" />
        </LinearLayout>

        <ImageView
            style="@style/home_divider" />

        <LinearLayout
            android:id="@+id/find_team"
            style="@style/home_linear_layout">

            <ImageView
                style="@style/home_content_icon"
                android:src="@mipmap/find_team" />

            <TextView
                style="@style/home_content_text"
                android:textColor="#3C3C3C"
                android:text="@string/home_find_team" />
        </LinearLayout>

        <ImageView
            style="@style/home_divider" />

        <LinearLayout
            android:id="@+id/question_answer"
            style="@style/home_linear_layout">

            <ImageView
                style="@style/home_content_icon"
                android:src="@mipmap/question_answer" />

            <TextView
                style="@style/home_content_text"
                android:textColor="#3C3C3C"
                android:text="@string/home_question_answer" />
        </LinearLayout>

        <ImageView
            style="@style/home_divider" />

        <LinearLayout
            android:id="@+id/material_recommendation"
            style="@style/home_linear_layout">

            <ImageView
                style="@style/home_content_icon"
                android:src="@mipmap/material_recommendation" />

            <TextView
                style="@style/home_content_text"
                android:textColor="#3C3C3C"
                android:text="@string/home_material_recommendation" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

