<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/order_tab_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/order_all"
            android:textColor="#5f97fa"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/order_tab_ongoing"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/order_ongoing"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/order_tab_evaluate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/order_evaluate"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/order_tabline"
        android:layout_width="1dp"
        android:layout_height="3dp"
        android:background="@drawable/order_tabline" />
</LinearLayout>
