<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/addr_topBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#78A7FB"
            android:orientation="vertical">

        <com.daoguang.dopemaster.base.FontIconButton
                android:id="@+id/back_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:textColor="@color/blue"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:padding="4dp"
                android:text="@string/back_addr" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manager_address"
                android:textSize="24sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white" />

        <com.daoguang.dopemaster.base.FontIconButton
                android:id="@+id/create_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:padding="4dp"
                android:text="@string/create_addr" />
    </RelativeLayout>

    <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/addr_topBar">

    </ListView>

    <RelativeLayout
            android:id="@+id/empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

        <TextView
                android:id="@+id/empt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:text="@string/empty_view" />

        <Button
                android:id="@+id/empty_creat_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empt_text"
                android:text="@string/new_address" />

    </RelativeLayout>


</RelativeLayout>