<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/coupon_topBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#78A7FB"
            android:orientation="vertical">

        <com.daoguang.dopemaster.base.FontIconButton
                android:id="@+id/back_coupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:textColor="@color/blue"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:padding="4dp"
                android:text="@string/back_addr" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manager_coupon"
                android:textSize="24sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white" />

    </RelativeLayout>

    <ListView
            android:id="@+id/coupon_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/coupon_topBar">

    </ListView>

    <RelativeLayout
            android:id="@+id/coupon_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

        <TextView
                android:id="@+id/empt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:text="@string/coupon_empty_view" />
    </RelativeLayout>


</RelativeLayout>