<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE">

    <com.daoguang.dopemaster.ui.view.TopBar
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        custom:leftIcon="@mipmap/back"
        custom:titleText="设置"
        custom:titleTextSize="15sp"
        custom:titleTextColor="#FFFFFF"
        custom:leftMargin="@dimen/setting_linearTop"
        custom:topMargin="@dimen/setting_imgTop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/setting_linearTop"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_setting_comment"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/setting_linearTop"/>

            <ImageView
                android:layout_width="@dimen/setting_linearTop"
                android:layout_height="@dimen/setting_linearTop"
                android:scaleType="fitCenter"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="@dimen/setting_imgTop"
                android:src="@mipmap/move_image"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginTop="10dp"
            android:background="#B6B6B6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_setting_advice_feedback"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/setting_linearTop"/>

            <ImageView
                android:layout_width="@dimen/setting_linearTop"
                android:layout_height="@dimen/setting_linearTop"
                android:scaleType="fitCenter"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="@dimen/setting_imgTop"
                android:src="@mipmap/move_image"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginTop="10dp"
            android:background="#B6B6B6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_setting_recommend_friend"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/setting_linearTop"/>

            <ImageView
                android:layout_width="@dimen/setting_linearTop"
                android:layout_height="@dimen/setting_linearTop"
                android:scaleType="fitCenter"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="@dimen/setting_imgTop"
                android:src="@mipmap/move_image"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/setting_linearTop"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_setting_check_update"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/setting_linearTop"/>

            <ImageView
                android:layout_width="@dimen/setting_linearTop"
                android:layout_height="@dimen/setting_linearTop"
                android:scaleType="fitCenter"
                android:layout_marginLeft="255dp"
                android:layout_marginTop="@dimen/setting_imgTop"
                android:src="@mipmap/move_image"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginTop="10dp"
            android:background="#B6B6B6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_setting_delete_cache"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/setting_linearTop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12.5M"
                android:textSize="15sp"
                android:layout_marginLeft="195dp"/>

            <ImageView
                android:layout_width="@dimen/setting_linearTop"
                android:layout_height="@dimen/setting_linearTop"
                android:scaleType="fitCenter"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="@dimen/setting_imgTop"
                android:src="@mipmap/move_image"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/setting_linearTop"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_setting_aboutUs"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/setting_linearTop"/>

            <ImageView
                android:layout_width="@dimen/setting_linearTop"
                android:layout_height="@dimen/setting_linearTop"
                android:scaleType="fitCenter"
                android:layout_marginLeft="255dp"
                android:layout_marginTop="@dimen/setting_imgTop"
                android:src="@mipmap/move_image"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
